--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-====================================  bot  ====================================
-Per eseguire il playbook sull'host `bot` è necessario inserire il token del bot
-di telegram nel file `passwords/bot_token`.
+Raccolta di _task_ _Ansible_ per configurare l'infrastruttura dietro ai servizi
+di CSUnibo. I dettagli sull'uso sono disponibili sulla [wiki di
+CSUnibo](https://csunibo.github.io/wiki/infrastruttura/automazione/index.html).
