stop using md syntax

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Raccolta di _task_ _Ansible_ per configurare l'infrastruttura dietro ai servizi
-di CSUnibo. I dettagli sull'uso sono disponibili sulla [wiki di
-CSUnibo](https://csunibo.github.io/wiki/infrastruttura/automazione/index.html).
+di CSUnibo. I dettagli sull'uso sono disponibili sulla wiki di
+CSUnibo alla pagina
+https://csunibo.github.io/wiki/infrastruttura/automazione/index.html.
